# riddlesolver

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
riddlesolver/: app.py  config.ini  config.py  constants.py  repository.py  requirements.txt  setup.py  streamlit_app.py  summary.py  utils.py
src/riddlesolver/: app.py  requirements.txt
