[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riddlesolver"
version = "0.1.0"
description = "A command-line tool to summarize Git commits using OpenAI ChatGPT"
authors = [{ name = "Siyuan Wu", email = "cushmily@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
license = "MIT"
dependencies = [
    "gitpython",
    "openai",
    "requests"
]