[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riddlesolver"
dynamic = ["version"]
description = "A command-line tool to summarize Git commits using OpenAI ChatGPT"
authors = [{ name = "Siyuan Wu", email = "cushmily@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
license = "MIT"
dependencies = [
    "gitpython",
    "openai",
    "requests",
    "pyperclip",
    "python-dateutil",
    "configparser",
]

[project.scripts]
riddlesolver = "riddlesolver.app:main"

[tool.hatch.version]
path = "riddlesolver/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["riddlesolver"]

[tool.hatch.build.targets.mac.hooks.custom]
post-install = "riddlesolver.setup:update_path_mac"

[tool.hatch.build.targets.windows.hooks.custom]
post-install = "riddlesolver.setup:update_path_windows"